page-scroll-up box added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header>
-      <nav>
+      <nav id="nav">
         <a href="#" class="logo">Shapely Demo</a>
         <ul>
           <li><a href="#home">HOME</a></li>
@@ -271,7 +271,7 @@
           </li>
         </ul>
       </div>
-      <a href="" class="angle_box"
+      <a href="#nav" class="angle_box"
         ><svg
           class="angle"
           xmlns="http://www.w3.org/2000/svg"
