hover effects more added

--- a/index.html
+++ b/index.html
@@ -179,17 +179,35 @@
           <ul>
             <li>
               <a href=""
-                ><img src="./assets/img/html5-logo.png.png" alt=""
+                ><img
+                  class="section8_logos"
+                  src="./assets/img/html5-logo.png"
+                  alt=""
               /></a>
             </li>
             <li>
-              <a href=""><img src="./assets/img/css-logo.png.png" alt="" /></a>
+              <a href=""
+                ><img
+                  class="section8_logos"
+                  src="./assets/img/css-logo.png"
+                  alt=""
+              /></a>
             </li>
             <li>
-              <a href=""><img src="./assets/img/less-logo.png.png" alt="" /></a>
+              <a href=""
+                ><img
+                  class="section8_logos"
+                  src="./assets/img/less-logo.png"
+                  alt=""
+              /></a>
             </li>
             <li>
-              <a href=""><img src="./assets/img/sass-logo.png.png" alt="" /></a>
+              <a href=""
+                ><img
+                  class="section8_logos"
+                  src="./assets/img/sass-logo.png"
+                  alt=""
+              /></a>
             </li>
           </ul>
         </div>
