section of gallery updated

--- a/index.html
+++ b/index.html
@@ -104,34 +104,54 @@
         </div>
         <div class="gallery">
           <article class="pjt_01">
-            <img src="./assets/img/galleryphoto (1).png" alt="galleryphoto" />
+            <a href="">
+              <img src="./assets/img/galleryfoto (1).jpg" alt="galleryphoto"
+            /></a>
           </article>
           <article class="pjt_02">
-            <img src="./assets/img/galleryphoto (2).png" alt="galleryphoto" />
+            <a href="">
+              <img src="./assets/img/galleryfoto (2).jpg" alt="galleryphoto"
+            /></a>
           </article>
           <article class="pjt_03">
-            <img src="./assets/img/galleryphoto (3).png" alt="galleryphoto" />
+            <a href="">
+              <img src="./assets/img/galleryfoto (3).jpg" alt="galleryphoto"
+            /></a>
           </article>
           <article class="pjt_04">
-            <img src="./assets/img/galleryphoto (4).png" alt="galleryphoto" />
+            <a href="">
+              <img src="./assets/img/galleryfoto (4).jpg" alt="galleryphoto"
+            /></a>
           </article>
           <article class="pjt_05">
-            <img src="./assets/img/galleryphoto (5).png" alt="galleryphoto" />
+            <a href="">
+              <img src="./assets/img/galleryfoto (5).jpg" alt="galleryphoto"
+            /></a>
           </article>
           <article class="pjt_06">
-            <img src="./assets/img/galleryphoto (6).png" alt="galleryphoto" />
+            <a href="">
+              <img src="./assets/img/galleryfoto (6).jpg" alt="galleryphoto"
+            /></a>
           </article>
           <article class="pjt_07">
-            <img src="./assets/img/galleryphoto (7).png" alt="galleryphoto" />
+            <a href="">
+              <img src="./assets/img/galleryfoto (7).jpg" alt="galleryphoto"
+            /></a>
           </article>
           <article class="pjt_08">
-            <img src="./assets/img/galleryphoto (8).png" alt="galleryphoto" />
+            <a href="">
+              <img src="./assets/img/galleryfoto (8).jpg" alt="galleryphoto"
+            /></a>
           </article>
           <article class="pjt_09">
-            <img src="./assets/img/galleryphoto22 (1).png" alt="galleryphoto" />
+            <a href="">
+              <img src="./assets/img/galleryfoto (9).jpg" alt="galleryphoto"
+            /></a>
           </article>
           <article class="pjt_10">
-            <img src="./assets/img/galleryphoto22 (2).png" alt="galleryphoto" />
+            <a href="">
+              <img src="./assets/img/galleryfoto (10).jpg" alt="galleryphoto"
+            /></a>
           </article>
         </div>
       </section>
