media query for tablet added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/tablet.css" />
+    <link rel="stylesheet" href="./assets/css/mobil.css" />
     <title>Project Sharpely - Minyeong</title>
   </head>
 
@@ -20,6 +22,12 @@
           <li><a href="#SHOP">SHOP </a></li>
         </ul>
       </nav>
+      <a href=""
+        ><div class="burger-wrapper">
+          <div class="burger"></div>
+          <div class="burger"></div>
+          <div class="burger"></div></div
+      ></a>
     </header>
     <main>
       <section class="section1">
