little things adjusted

--- a/index.html
+++ b/index.html
@@ -115,51 +115,61 @@
             <a href="">
               <img src="./assets/img/galleryfoto (1).jpg" alt="galleryphoto"
             /></a>
+            <!-- <p>Project #01</p> -->
           </article>
           <article class="pjt_02">
             <a href="">
               <img src="./assets/img/galleryfoto (2).jpg" alt="galleryphoto"
             /></a>
+            <!-- <p>Project #02</p> -->
           </article>
           <article class="pjt_03">
             <a href="">
               <img src="./assets/img/galleryfoto (3).jpg" alt="galleryphoto"
             /></a>
+            <!-- <p>Project #03</p> -->
           </article>
           <article class="pjt_04">
             <a href="">
               <img src="./assets/img/galleryfoto (4).jpg" alt="galleryphoto"
             /></a>
+            <!-- <p>Project #04</p> -->
           </article>
           <article class="pjt_05">
             <a href="">
               <img src="./assets/img/galleryfoto (5).jpg" alt="galleryphoto"
             /></a>
+            <!-- <p>Project #05</p> -->
           </article>
           <article class="pjt_06">
             <a href="">
               <img src="./assets/img/galleryfoto (6).jpg" alt="galleryphoto"
             /></a>
+            <!-- <p>Project #06</p> -->
           </article>
           <article class="pjt_07">
             <a href="">
               <img src="./assets/img/galleryfoto (7).jpg" alt="galleryphoto"
             /></a>
+            <!-- <p>Project #07</p> -->
           </article>
           <article class="pjt_08">
             <a href="">
               <img src="./assets/img/galleryfoto (8).jpg" alt="galleryphoto"
             /></a>
+            <!-- <p>Project #08</p> -->
           </article>
           <article class="pjt_09">
             <a href="">
               <img src="./assets/img/galleryfoto (9).jpg" alt="galleryphoto"
             /></a>
+            <!-- <p>Project #09</p> -->
           </article>
           <article class="pjt_10">
             <a href="">
               <img src="./assets/img/galleryfoto (10).jpg" alt="galleryphoto"
             /></a>
+            <!-- <p>Project #10</p> -->
           </article>
         </div>
       </section>
